css/fieldmanager.css
/* Fields */

.fm-wrapper select,
.fm-wrapper textarea,
.fm-wrapper input[type='text'],
.fm-wrapper input[type='password'],
.fm-wrapper input[type='datetime'],
.fm-wrapper input[type='datetime-local'],
.fm-wrapper input[type='date'],
.fm-wrapper input[type='month'],
.fm-wrapper input[type='time'],
.fm-wrapper input[type='week'],
.fm-wrapper input[type='number'],
.fm-wrapper input[type='email'],
.fm-wrapper input[type='url'],
.fm-wrapper input[type='search'],
.fm-wrapper input[type='tel'],
.fm-wrapper input[type='color'] {
	max-width: 100%;
}

.fm-wrapper input[type='text'],
.fm-wrapper select,
.fm-wrapper textarea {
	margin: 1px;
	padding: 5px 8px;
}

.fm-hidden {
	display: none;
}

.fm-label {
	margin: 0 0 5px;
}

.fm-label-inline {
	margin: 0 5px 0 0;
}

.fm-label-inline.fm-label-after {
	margin: 0 0 0 5px;
}

.fm-label label {
	font-size: 13px;
	font-weight: 700;
	line-height: 1.4em;
	display: inline-block;
	margin: 0 0 4px;
}

.fmjs-removable-label label {
	line-height: 1.7em;
}

/* Each FM Field */

.fm-item.fm-field {
	margin: 5px 0 25px;
}

.fm-option {
	margin-bottom: 4px;
}

.fm-option label {
	vertical-align: top;
}

/* Gallery */
.fm-gallery .fm-item-description {
	margin: 4px 0 10px;
}

/* Groups */
.fm-group {
	margin-bottom: 5px;
	background-color: #fff;
}

.fm-group-inner,
.fm-group-label-wrapper {
	border: solid 1px #dfdfdf;
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
}

.fm-group-inner {
	padding: 10px;
	border-top: none;
}

.fm-group-description {
	font-size: 14px;
	margin: 13px 0 20px;
}

.fm-group h4,
.fm-group div.fm-group-label-wrapper {
	font-size: 13px;
	margin: 0;
	padding: 0;
	cursor: default;
	color: #222;
	background-color: #fafafa;
}

.fm-group-label-wrapper {
	height: 36px;
}

.fm-group-label-wrapper.fmjs-drag-header,
.fm-group-label-wrapper.fmjs-collapsible-handle {
	-webkit-transition: border 0.15s ease-in-out;
	-moz-transition: border 0.15s ease-in-out;
	transition: border 0.15s ease-in-out;
}

.fm-group-label-wrapper.fmjs-drag-header:hover,
.fm-group-label-wrapper.fmjs-collapsible-handle:hover {
	border: 1px solid #999;
}

.fm-group-label-wrapper.fmjs-drag-header:focus .toggle-indicator:before,
.fm-group-label-wrapper.fmjs-collapsible-handle:focus .toggle-indicator:before {
	-webkit-box-shadow: 0 0 0 1px #5b9dd9, 0 0 2px 1px rgba(30, 140, 190, 0.8);
	box-shadow: 0 0 0 1px #5b9dd9, 0 0 2px 1px rgba(30, 140, 190, 0.8);
}

.fm-group-label-wrapper.fmjs-collapsible-handle .fmjs-remove,
.fm-group-label-wrapper.fmjs-drag-header .fmjs-remove {
	visibility: hidden;
	width: 36px;
	height: 36px;
	margin: 0;
	-webkit-transition: opacity 0.15s ease-in-out;
	-moz-transition: opacity 0.15s ease-in-out;
	transition: opacity 0.15s ease-in-out;
	opacity: 0;
}

.fm-group-label-wrapper.fmjs-collapsible-handle .fmjs-remove:before,
.fm-group-label-wrapper.fmjs-drag-header .fmjs-remove:before {
	display: inline-block;
	margin-top: 10px;
	margin-left: 10px;
}

.fm-group-label-wrapper.fmjs-collapsible-handle:hover .fmjs-remove,
.fm-group-label-wrapper.fmjs-drag-header:hover .fmjs-remove {
	visibility: visible;
	opacity: 1;
}

.fm-group-label-wrapper.fmjs-collapsible-handle .toggle-indicator:hover {
	color: #777;
}

.fm-group .toggle-indicator {
	width: 36px;
	height: 36px;
	color: #a0a5aa;
}

.fm-group .toggle-indicator:hover {
	cursor: pointer;
}

.fm-group .toggle-indicator:before {
	width: 20px;
	margin-top: 7px;
	margin-left: 8px;
	vertical-align: middle;
	text-indent: -1px;
	border-radius: 50%;
}

.fm-item .fmjs-collapsible-handle.closed .toggle-indicator:before {
	content: '\f140';
}

.fmjs-collapsible-handle .toggle-indicator {
	float: right;
}

div.fm-group-label-wrapper {
	overflow: auto;
}

.fm-group div.fm-group-label-wrapper h4 {
	line-height: 2.7;
	float: left;
	margin: 0;
	padding: 0 10px;
	border-bottom: none;
	background-color: transparent;
	background-image: none;
}

/* Sortables and repeatables */
.fm-item,
.fmjs-sortable .sortable-placeholder {
	margin-bottom: 10px;
}

.fm-add-another-wrapper {
	margin: 15px 0;
}

.fmjs-proto {
	display: none;
}

.fm-item.fm-sortable-field {
	position: relative;
	margin-bottom: 10px;
	padding: 6px 29px 6px 33px;
	border: 1px solid #eee;
	background: #fff;
}

.fm-sortable-field .fmjs-remove {
	position: absolute;
	top: 0;
	right: 0;
	width: 30px;
	height: 30px;
	margin: 0;
	text-align: center;
}

.fm-sortable-field .fmjs-remove:before {
	line-height: 2;
	vertical-align: middle;
}

.fm-item.fm-no-labels.fm-text,
.fm-item.fm-no-labels.fm-ajax,
.fm-item.fm-no-labels.fm-autocomplete {
	padding: 0 29px 0 30px;
	border: none;
	background: transparent;
}

.fm-item.fm-no-labels.fm-text .fmjs-drag-icon,
.fm-item.fm-no-labels.fm-ajax .fmjs-drag-icon,
.fm-item.fm-no-labels.fm-autocomplete .fmjs-drag-icon {
	width: 31px;
	height: 31px;
}

.fm-item.fm-no-labels.fm-text .fmjs-remove,
.fm-item.fm-no-labels.fm-ajax .fmjs-remove,
.fm-item.fm-no-labels.fm-autocomplete .fmjs-remove {
	position: relative;
	top: 1px;
	width: 31px;
	height: 31px;
}

.fmjs-removable-element,
.fmjs-clearable-element {
	float: left;
}

.fmjs-removable:before,
.fmjs-removable:after {
	display: table;
	content: ' ';
}

.fmjs-removable:after {
	clear: both;
}

.fmjs-drag-icon:before,
.fmjs-remove:before,
.fmjs-clear:before,
.fm-media-edit:before {
	font-family: dashicons;
	font-size: 15px;
	line-height: 1;
	color: #a0a5aa;
}

.fmjs-remove,
.fmjs-clear {
	display: block;
	float: left;
	width: 15px;
	height: 15px;
	margin: 4px 0 0 5px;
	text-decoration: none;
}

.fmjs-remove:before,
.fmjs-clear:before {
	content: '\f153';
}

.fmjs-remove:hover {
	cursor: pointer;
}

.fmjs-remove:hover:before,
.fmjs-clear:hover:before {
	color: #d54e21;
}

.fmjs-drag-icon {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	width: 22px;
	height: 100%;
	margin: auto;
	-webkit-transition: background 0.15s ease-in-out;
	-moz-transition: background 0.15s ease-in-out;
	transition: background 0.15s ease-in-out;
	text-align: center;
	background: #eee;
}

.fmjs-drag-icon:hover {
	cursor: move;
	color: #777;
	background-color: #e0e0e0;
}

.fmjs-drag-icon:before {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	width: 22px;
	height: 16px;
	margin: auto;
	content: '\f156';
}

.fm-group div.fm-group-label-wrapper.fmjs-drag-header {
	cursor: move;
}

div.fm-group-label-wrapper .fmjs-remove {
	float: right;
}

.fm-dialog {
	border: solid 1px #555;
	background: #fff;
}

.fm-dialog h3 {
	font: 12px 'Lucida Grande', Verdana, Arial, sans-serif;
	margin: 0;
	padding: 3px 10px;
	color: #cfcfcf;
	background: #222;
}

.fm-dialog .inner {
	margin: 10px;
}

.fm-item-description {
	font-style: italic;
	line-height: 1.4em;
	display: block;
	clear: both;
	margin: 4px 0 0;
	color: #999;
}

.fm-wrapper div.fm-submenu {
	position: absolute;
	z-index: 999;
	top: -9px;
	left: 146px;
	display: none;
	overflow: hidden;
	padding: 0 5px 5px 0;
	list-style: none;
	background-color: transparent;
}

.fm-wrapper .fm-submenu,
.fm-wrapper .fm-submenu-wrap {
	width: 145px;
}

.fm-wrapper .fm-submenu * {
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
}

.fm-wrapper .fm-submenu li {
	display: block;
	margin: 2px 0;
	padding: 2px 5px;
	cursor: pointer;
}

.fm-wrapper li .fm-submenu-wrap {
	position: relative;
	border-width: 1px 1px 1px 0;
	border-style: solid solid solid none;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
}

.fm-wrapper .fm-submenu-wrap {
	-webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
	-moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
}

.fm-wrapper .fm-submenu-wrap,
.fm-wrapper .fm-submenu ul {
	border-color: #dfdfdf;
}

.fm-wrapper .fm-submenu ul {
	padding: 4px 0;
	background-color: #fff;
}

.fm-wrapper div.fm-submenu.sub-open {
	display: block;
	padding: 0 8px 8px 0;
}

.fm-wrapper .fm-submenu li:hover,
.fm-wrapper .fm-submenu li:focus {
	color: #333;
	background-color: #eaf2fa;
}

.chzn-container-multi .chzn-choices .search-field input {
	height: 21px !important;
}

/* Grid editor CSS */
.grid-toggle-wrapper {
	overflow: scroll;
	max-height: 500px;
	margin: 5px 5px 5px 0;
	padding: 7px;
}

.grid-toggle-wrapper.with-grid {
	padding: 5px;
	border: solid 2px #ccc;
	background: #fff;
}

.grid-activate {
	display: block;
	width: 200px;
	height: 20px;
	margin: 5px 0;
	padding: 5px;
	text-decoration: none;
	border: solid 1px #000;
}

.grid-activate:before {
	font-family: dashicons;
	font-size: 17px;
	line-height: 1;
	margin-right: 5px;
	content: '\f509';
	vertical-align: middle;
	color: #a0a5aa;
}

.grid-activate:hover {
	border: solid 1px #d54e21;
}

.grid-activate:hover:before {
	color: #777;
}

.with-grid .grid-activate:hover {
	border: none;
}

.with-grid .grid-activate {
	border: none;
	background: #fff;
}

/* Rich text area */
.fm-richtext .fm-element {
	width: 600px;
	height: 100px;
	margin: 10px 0;
	padding: 5px;
	background: #fff;
}

a.fm-delete {
	text-decoration: none;
	color: #bc0b0b;
}

a.fm-delete:hover {
	color: #f00;
}

/** Media Uploads **/
.media-file-preview {
	position: relative;
	margin: 10px auto;
	padding: 10px 66px 10px 10px;
	border: solid 1px #ececec;
	border-radius: 3px;
	background-color: #fafafa;
}

.media-file-preview a {
	text-decoration: none;
}

.media-file-preview img,
.media-file-preview a {
	opacity: 1;
	-webkit-transition: opacity 0.15s ease-in-out;
	-moz-transition: opacity 0.15s ease-in-out;
	transition: opacity 0.15s ease-in-out;
}

.media-file-preview img:hover,
.media-file-preview a:hover {
	opacity: 0.95;
}

.media-file-preview .dashicons-media-document {
	font-size: 40px;
	width: 40px;
	height: 40px;
	padding: 2px;
	color: #ccc;
	border: 1px solid #ececec;
	border-radius: 3px;
	background-color: white;
}

.media-file-preview .fm-media-edit {
	right: 30px;
	text-decoration: none;
}

.fm-media-edit:before {
	content: '\f464';
}

.fm-media-edit:hover:before {
	color: #0073aa;
}

.fm-media-edit,
.media-file-preview .fmjs-remove {
	position: absolute;
	top: 0;
	right: 0;
	width: 30px;
	height: 30px;
	margin: 0;
	text-align: center;
}

.fm-media-edit:before,
.media-file-preview .fmjs-remove:before {
	line-height: 2;
	vertical-align: middle;
}

.fm-file-detail {
    display: inline-block;
    margin: 5px 0 0 10px;
}

.fm-file-detail h4 {
	margin: 0;
}

.fm-file-type {
	color: #999;
	font-style: italic;
}

.fm-submenu-form-wrapper {
	padding: 20px 0;
}

.fm-datepicker-popup {
	width: 100px;
}

.fm-datepicker-time {
	width: 25px;
}

.form-field input[type='checkbox'],
.form-field input[type='radio'],
.form-field input.fm-add-another,
.form-field .fm-media-button {
	width: auto;
}

.form-field .fm-option label,
.form-field .fm-checkbox label {
	display: inline;
}

